Fix for clipping in firefox and safari

--- a/src/main/webapp/js/components/interface/spotlight/spotlight.less
+++ b/src/main/webapp/js/components/interface/spotlight/spotlight.less
@@ -160,7 +160,7 @@
 }
 
 .spotlight-button {
-    height: 60px;
+    height: 120px;
     width: 120px;
     margin: 25px;
     background: none !important;
